--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,6 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+      - run: npm install -g mdx2vast
+
       - uses: errata-ai/vale-action@v2.1.1
         with:
           fail_on_error: true
