--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,7 +4,6 @@ on:
     branches:
       - main
 
-
 jobs:
   vale:
     name: vale
@@ -18,3 +17,20 @@ jobs:
       - uses: errata-ai/vale-action@v2.1.1
         with:
           fail_on_error: true
+
+  lychee:
+    name: lychee
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Restore lychee cache
+        uses: actions/cache@v4
+        with:
+          path: .lycheecache
+          key: cache-lychee-${{ github.sha }}
+          restore-keys: cache-lychee-
+
+      - uses: lycheeverse/lychee-action@v2
+        with:
+          fail: true
