Add styles back to version control and fix spelling

--- a/.vale.ini
+++ b/.vale.ini
@@ -4,5 +4,7 @@ MinAlertLevel = suggestion
 
 Packages = Google, write-good, MDX
 
+Vocab = atopile
+
 [*.{md,mdx}]
 BasedOnStyles = Vale, Google, write-good
