--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,8 +15,8 @@ jobs:
       - run: npm install -g mdx2vast
 
       - uses: errata-ai/vale-action@v2.1.1
-        with:
-          fail_on_error: true
+        # with:
+        #   fail_on_error: true
 
   internal-links:
     name: internal-links
