vale ignore api-reference

--- a/.vale.ini
+++ b/.vale.ini
@@ -10,3 +10,8 @@ Vocab = atopile
 BasedOnStyles = Vale, Google, write-good
 Google.Exclamation = NO
 Google.Quotes = NO
+
+[**/api-reference/**/*.{md,mdx}]
+BasedOnStyles = Vale
+Google.Exclamation = NO
+Google.Quotes = NO
